Update 1_Filtering and processing location data.qmd

--- a/1_Filtering and processing location data.qmd
+++ b/1_Filtering and processing location data.qmd
@@ -36,7 +36,7 @@ dir <- getwd()
 
 ### Install and load packages
 
-The following chunk of code will check for the necessary packages (listed in `packages`) and if they are not installed on the users computer, will install them. They will then be loaded into the session. The `crawlUtils` package will be installed for every new session because it is under development. 
+The following chunk of code will check for the necessary packages (listed in `packages`) and if they are not installed on the users computer, will install them. They will then be loaded into the session. The `crawlUtils` package will be installed for every new session because it is under development.
 
 ```{r, output=FALSE}
 # Package names
@@ -59,34 +59,6 @@ install.packages(c(packages[!installed_packages], "crawlUtils"),
 # Packages loading
 invisible(lapply(c(packages,"crawlUtils"), library, character.only = TRUE))
 ```
-
-<!-- ### Reinstall crawlUtils packages -->
-
-<!-- [ARG: Devin said he will review the best way to call in the crawlUtil package]{.underline} -->
-
-<!-- crawlUtils is constantly edited so it is important to re-download the beginning of every session using this code (select "Yes" if asked to install).: -->
-
-<!-- ```{r} -->
-<!-- install.packages("remotes") -->
-<!-- remotes::install_github("dsjohnson/crawlUtils") -->
-<!-- ``` -->
-
-<!-- ### (Optional) steps for installing crawlUtils -->
-
-<!-- If there are issues with installing crawlUtils, follow these steps: -->
-
-<!-- -   Step 1, install this package: -->
-
-<!-- install.packages('crawlUtils', dependencies= TRUE, repos='http://dsjohnson.r-universe.dev') -->
-
-<!-- ```{r} -->
-
-<!-- ``` -->
-
-<!-- -   Step 2. Some dependencies may not be downloaded with the call above. Each dependency is installed individually by running the code below. NOTE: click 'yes' to 'Do you want to install from sources the package which needs compilation?' if it pops up. -->
-
-<!-- install.packages("sf") install.packages("fuzzyjoin") install.packages("foreach") install.packages("rmapshaper") install.packages("nngeo") install.packages("janitor") install.packages("progressr") install.packages("ctmm") install.packages("mvtnorm") install.packages("mapview") install.packages("sfnetworks") -->
-
 
 ### Read in telemetry data, filter locations by Argos location class, and remove grossly inaccurate positions
 
@@ -114,13 +86,17 @@ You can keep only FastGPS locations or only Argos locations by placing the follo
 ```{r,eval=FALSE}
 # locs <- locs %>% filter(type=="FastGPS")
 ```
+
 or
+
 ```{r, eval=FALSE}
 # locs <- locs %>% filter(type=="Argos")
 ```
 
 ### Convert location data to simple feature (sf) points
+
 Convert data to R spatial object
+
 ```{r}
 locs <- st_as_sf(locs, coords=c('longitude','latitude'), crs=4326)
 ```
@@ -143,12 +119,15 @@ meta_data <- read_csv(file.path(dir,"raw_data/Metadata.csv")) %>%
 ```
 
 Next, filter out all telemetry locations for animals *not* in the meta-data
+
 ```{r}
 locs <- filter(locs, deploy_id %in% meta_data$deploy_id)
 ```
 
 ### Remove locations prior to deployment date
+
 Remove locations within, say, 24 hours of deployment to eliminate possible capture effects on movement. In the code below, `24` can be changed to whatever number of hours is desired.
+
 ```{r}
 locs <- meta_data  %>% left_join(locs,.)
 locs <- filter(locs, datetime >= (deploy_date+hours(24)) )
@@ -222,25 +201,31 @@ locs <- locs %>% st_transform(prj)
 ```
 
 ### Obtain a land polygon for mapping
-(Optional) Here we'll use the `pic_maps` package to get a spatial polygon for the coastline. 
-You'll need to download the OSM data the first time you use it. So run the code below if this is the first time using the `picMaps` package. The `set_data_storage()` function will create a directory where the worldwide Open Street Maps (OSM) data will be downloaded. You can specify this directory to be wherever you want that has write permissions. The directory specified below is the default. 
+
+(Optional) Here we'll use the `pic_maps` package to get a spatial polygon for the coastline. You'll need to download the OSM data the first time you use it. So run the code below if this is the first time using the `picMaps` package. The `set_data_storage()` function will create a directory where the worldwide Open Street Maps (OSM) data will be downloaded. You can specify this directory to be wherever you want that has write permissions. The directory specified below is the default.
+
 ```{r, eval=FALSE}
 # set_data_storage(path = "~/.picmaps_data")
 # osm_download()
 ```
-To get a land polygon for our location data we create a bounding box and buffer it by 150km (150,000m), turn it in to a spatial object and `osm_coast` will obtain all land polygons that intersect that buffer. Setting `keep=0.5` in the `osm_coast()` will retain about 50% of the raw coastline data which reduces the resolution some. The land polygons will be of the same projection as the `locs` data. 
+
+To get a land polygon for our location data we create a bounding box and buffer it by 150km (150,000m), turn it in to a spatial object and `osm_coast` will obtain all land polygons that intersect that buffer. Setting `keep=0.5` in the `osm_coast()` will retain about 50% of the raw coastline data which reduces the resolution some. The land polygons will be of the same projection as the `locs` data.
+
 ```{r, output=FALSE}
 land <- locs %>% st_bbox() %>% st_as_sfc() %>% 
   st_buffer(150000) %>% osm_coast(union=TRUE, keep=0.5)
 ```
 
 Alternatively, if you have a specific .shp file you would like to use instead, the following code will read in the shape file.
+
 ```{r, eval=FALSE}
 # land <- read_sf("raw_data/marianas/marianas.shp")
 ```
 
 ### Create visibility graph for rerouting
+
 Here a visability graph is created for routing predicted or simulated track locations around land polygons
+
 ```{r}
 vis_graph <- pathroutr::prt_visgraph(land, centroids=TRUE)
 ```
